--- a/index2.html
+++ b/index2.html
@@ -14,15 +14,25 @@
     </header>
     <main>
         <section class="bg-gray-200 p-2 mt-4">
-            <input type="text" placeholder="Search" class="input input-bordered w-full max-w-xs" />
-            <button class="btn btn-active btn-primary">Search</button>
+            <input id="search-field" type="text" placeholder="Search" class="input input-bordered w-full max-w-xs" />
+            <button onclick="handleSearch()" class="btn btn-active btn-primary">Search</button>
         </section>
 
+        <!-- search result -->
         <section>
             <div id="phone-container" class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-3 ">
             </div>
-        </section>
+           
+             <!-- spinner or loader -->
+            <div id="loading-spinner" class="text-center my-40 hidden">
+                <span class="loading loading-spinner loading-lg"></span>
+            </div>
 
+            <!-- Show All Button -->
+            <div id="show-all-container" class="hidden" >
+                <button onclick="handleShowAll()" class="btn btn-accent">Show All</button>
+            </div>
+        </section>
     </main>   
     <footer>
 
