--- a/index2.html
+++ b/index2.html
@@ -37,7 +37,7 @@
     <footer>
 
     </footer> 
-    <script src="./phone-hunter/js/phone.js"></script>
+    <script src="./js/phone.js"></script>
     <script src="./phone-hunter/js/tailwind.config.js"></script>
 </body>
 </html>
